chore: add property operationId to routes & rename them in orval
